TileMill is back

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ window.onload = function() {
 <div>So.<br>Where do I start?</div>
 <div>Do I need to make my own custom tiles?</div>
 <div>No? Use these! <a href="http://wiki.openstreetmap.org/wiki/Tiles">OpenStreetMap</a>, <a href="http://cloudmade.com/products/map-tiles">CloudMade</a>, <a href="http://maps.stamen.com">Stamen</a>, <a href="https://www.mapbox.com/tour/#maps">MapBox</a>, <a href="http://developer.mapquest.com/web/products/open/map">MapQuest</a></div>
-<div>Yes? Use <a href="https://www.mapbox.com/mapbox-studio/">Mapbox Studio</a> to design your own tiles.</div>
+<div>Yes? Use Use <a href="https://www.mapbox.com/tilemill/">TileMill</a> or <a href="https://www.mapbox.com/mapbox-studio/">Mapbox Studio</a> to design your own tiles.</div>
 <div><img src="images/worldwide-wood.png"> <em>Pretty!</em></div>
 <div>Style your map with <a href="https://www.mapbox.com/carto">CartoCSS</a> (or just carto)</div>
 <div>You can host these files on <a href="https://www.mapbox.com/plans/">MapBox</a>, or...</div>
