updated more/soon slide

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ window.onload = function() {
 <div>No? Put all your data into the tiles, possibly using UTFGrid for interactivity</div>
 <div>Yes? Convert a Shapefile to GeoJSON with <a href="http://ogre.adc4gis.com/">OGRE</a> or write your own GeoJSON with <a href="http://geojson.io">geojson.io</a></div>
 <div>Finally, <a href="http://cartodb.com">CartoDB</a> takes care of almost all of this for you!</div>
-<div><img src="images/random/soon.jpg">More:<br><a href="http://maptime.github.io/geolearning.html">maptime.github.io/geolearning.html</a> <p>Soon:<br><a href="http://omgitsmaptime.com">maptime.io</a></div>
+<div><img src="images/random/lurn_moar.jpg">Learn More:<br><a href="http://maptime.io/lessons-resources/">http://maptime.io/lessons-resources/</a></div>
 
 <div>Thanks to:</div>
 <div><a href="https://github.com/lyzidiamond">Lyzi Diamond</a></div>
