--- a/index_fr.html
+++ b/index_fr.html
@@ -185,7 +185,7 @@ window.onload = function() {
 <div>La librairie JS récupère les tuiles, ajoute les content layers, gère l'interaction.</div>
 <div>L'incontournable: <a href="http://leafletjs.com">Leaflet</a>, d'autres options: <a href="http://openlayers.org">OpenLayers</a> / <a href="http://modestmaps.com">Modest Maps</a> / <a href="http://polymaps.org">Polymaps</a></div>
 <div>Et aussi: <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps API</a> / <a href="http://www.microsoft.com/maps/choose-your-bing-maps-API.aspx">Bing Maps API</a> / <a href="http://developer.here.com/web/guest/javascript-apis">Nokia HERE Maps API</a> / <a href="https://developers.arcgis.com/en/javascript/">ESRI ArcGIS API</a></div>
-
+<div><a href="https://www.youtube.com/watch?v=NLbyHffKQuU">Leaflet story in 13 minutes</a></div>
 
 
 <div>En fait, tout n'est pas si simple pour 3 raisons:</div>
