added a link to tmcw's prez

--- a/index_fr.html
+++ b/index_fr.html
@@ -222,6 +222,7 @@ window.onload = function() {
 <div>tuiles vectorielles :<br><em><s>géographie</s></em><br>(offsets dans la tuile)</div>
 <div>Rendu <em>côté serveur :</em><br> Mapbox Studio Classic...</div>
 <div>Rendu <em>côté client : WebGL</em><br><a href="https://www.mapbox.com/blog/mapbox-gl-js/">Mapbox GL</a>, <a href="https://mapzen.com/projects/tangram/Tangram">Mapzen Tangram</a>...</div> </div>
+<div>Voir: <a href="http://www.macwright.org/presentations/jsgeo/notes/">cette prrésentation</a></div>
 
 <div>Par où commencer?</div>
 <div>Fabriquer ses propres tuiles?</div>
