--- a/leaflet.html
+++ b/leaflet.html
@@ -14,6 +14,8 @@
 
 .main-class {
 display: flex;
+flex-flow: row wrap;
+
 }
 
 #mapid {
@@ -23,20 +25,30 @@ width: 60%;
 height: 1300px;
 }
 
-#text {
+.text {
 display: flex;
+float: right;
+max-width: 300px;
+max-height: 300px;
 font-size: 40px; 
-margin: 100px 100px 0 100px;}
+margin: 100px 100px 0 100px;
+}
 </style>
 </head>
 
 <body>	
 <main class="main-class">
 <div id='mapid'></div>
-<div id='text'><h3>Base Map</h3> 
+<div class='text'><h3>Base Map</h3> 
 <h4>Tools for styling (MapBox Studio Classic, Geoserver, QGIS)</h4>
+</br> 
+</div>
+<div class="text">
 <h3>Data Layers</h3> </br> 
-<h4>Polygons </h4>
+<h4>Tools for styling and editing 
+(leaflet, openlayers)</h4>
+
+</div>
 </div>
 
 <script>
@@ -50,7 +62,11 @@ var myMap = new L.Map('mapid', {center: latlng, zoom: 10, layers: [baseMap]});
 
 var theMarker = L.marker([41.501860,-81.835799]).addTo(myMap);
 
-var geojsonLayer = L.geoJson.ajax("locations.geojson");
+var geojsonLayer = L.geoJson.ajax("locations.geojson", { 
+		onEachFeature: function(feature, layer) {
+        	layer.bindPopup(feature.properties.name);
+    	}
+    });
 
 geojsonLayer.addTo(myMap);
 
