--- a/leaflet.html
+++ b/leaflet.html
@@ -1,21 +1,16 @@
-!<DOCTYPE html>
+<!doctype html>
 <html>
     <head>
+    <title>My new map! </title>	
         <meta charset="utf-8" />
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
-
-<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
- -->
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
 
 <style>
-
 .main-class {
 display: flex;
 flex-flow: row wrap;
-
 }
 
 #mapid {
@@ -55,6 +50,7 @@ margin: 100px 100px 0 100px;
                     
 // var basemap = new L.TileLayer('http://{s}.tiles.mapbox.com/v3/skorasaurus.5eb85050/{z}/{x}/{y}.png', {maxZoom: 13});
 var baseMap = new L.TileLayer('https://api.mapbox.com/styles/v1/skorasaurus/cjm8df5wd09sc2spfluycp0oq/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1Ijoic2tvcmFzYXVydXMiLCJhIjoiaEdGTUZWTSJ9.osOC8tWU3bMaNprVNoEu7g', {maxZoom: 21});
+
 var latlng = new L.LatLng(41.501860,-81.635799);
 
 var myMap = new L.Map('mapid', {center: latlng, zoom: 10, layers: [baseMap]});
@@ -62,9 +58,19 @@ var myMap = new L.Map('mapid', {center: latlng, zoom: 10, layers: [baseMap]});
 
 var theMarker = L.marker([41.501860,-81.835799]).addTo(myMap);
 
+var myStyle = {
+    "color": "#ff7800",
+    "weight": 5,
+    "opacity": 0.65
+};
+
 var geojsonLayer = L.geoJson.ajax("locations.geojson", { 
 		onEachFeature: function(feature, layer) {
         	layer.bindPopup(feature.properties.name);
+    	},
+
+    	style: function (feature) {
+        return myStyle;
     	}
     });
 
